@@ -25,6 +25,9 @@ Mod(5, 7)*x^3 + Mod(2, 7)*x^2 + Mod(1, 7)*x + Mod(6, 7)
 1051006573
 5
 1267650600228229401496703924683
+37
+37
+2
   ***   at top-level: random("")
   ***                 ^----------
   *** random: incorrect type in genrand (t_STR).
@@ -34,4 +37,9 @@ Mod(5, 7)*x^3 + Mod(2, 7)*x^2 + Mod(1, 7)*x + Mod(6, 7)
   ***   at top-level: setrand(-1)
   ***                 ^-----------
   *** setrand: domain error in setrand: n <= 0
-Total time spent: 0
+  ***   at top-level: randomprime([3,100],Mod(0,2))
+  ***                 ^-----------------------------
+  *** randomprime: elements not coprime in randomprime:
+    0
+    2
+Total time spent: 3
